Added CSS styles

--- a/index.html
+++ b/index.html
@@ -14,26 +14,33 @@
     />
   </head>
   <body>
-    <div class="content">
-      <h1>World clock</h1>
-      <form>
-        <select id="cities">
-          <option value="">Select one city</option>
-          <option value="Europe/Paris">Paris 🇫🇷</option>
-          <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
-          <option value="Australia/Sydney">Sydney 🇦🇺</option>
-        </select>
-      </form>
-      <div class="city">
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <h2>Los Angeles 🇺🇸</h2>
-            <p>November 25th 2022</p>
-          </div>
-          <div class="col-xs-12 col-sm-6" class="time">
-            1:28:14 <small>AM</small>
-          </div>
-        </div>
+    <div class="container">
+      <div class="content">
+        <h1 class="title">World clock</h1>
+        <form>
+          <select id="cities_select">
+            <option value="">Select one city</option>
+            <option value="Europe/Paris">Paris 🇫🇷</option>
+            <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
+            <option value="Australia/Sydney">Sydney 🇦🇺</option>
+          </select>
+        </form>
+        <ul class="cities">
+          <li>
+            <div>
+              <h2>Los Angeles 🇺🇸</h2>
+              <p class="date">November 25th 2022</p>
+            </div>
+            <div class="time">1:28:14 <small>AM</small></div>
+          </li>
+          <li>
+            <div>
+              <h2>Paris 🇫🇷</h2>
+              <p class="date">November 25th 2022</p>
+            </div>
+            <div class="time">1:28:14 <small>AM</small></div>
+          </li>
+        </ul>
       </div>
       <footer>
         <p class="built_by">
