--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.39/moment-timezone-with-data-1970-2030.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -26,14 +28,14 @@
           </select>
         </form>
         <ul class="cities">
-          <li>
+          <li id="los-angeles">
             <div>
               <h2>Los Angeles 🇺🇸</h2>
               <p class="date">November 25th 2022</p>
             </div>
             <div class="time">1:28:14 <small>AM</small></div>
           </li>
-          <li>
+          <li id="paris">
             <div>
               <h2>Paris 🇫🇷</h2>
               <p class="date">November 25th 2022</p>
