Added city selected time

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
       <div class="content">
         <h1 class="title">World clock</h1>
         <form>
-          <select id="cities_select">
+          <select id="city">
             <option value="">Select one city</option>
             <option value="Europe/Paris">Paris 🇫🇷</option>
             <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
             <option value="Australia/Sydney">Sydney 🇦🇺</option>
+            <option value="America/New_York">New York 🇺🇸</option>
           </select>
         </form>
-        <ul class="cities">
+        <ul class="cities" id="cities">
           <li id="los-angeles">
             <div>
               <h2>Los Angeles 🇺🇸</h2>
