Added current location time

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <form>
           <select id="city">
             <option value="">Select one city</option>
+            <option value="current">My current location 📍</option>
             <option value="Europe/Paris">Paris 🇫🇷</option>
             <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
             <option value="Australia/Sydney">Sydney 🇦🇺</option>
