Add link back to all cities

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </form>
         <ul class="cities" id="cities">
           <li id="los-angeles">
-            <div>
+            <div class="city_content">
               <h2>Los Angeles 🇺🇸</h2>
               <p class="date">November 25th 2022</p>
             </div>
             <div class="time">1:28:14 <small>AM</small></div>
           </li>
           <li id="paris">
-            <div>
+            <div class="city_content">
               <h2>Paris 🇫🇷</h2>
               <p class="date">November 25th 2022</p>
             </div>
