Changed some cities

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="content">
-        <h1 class="title">World clock</h1>
+        <h1 class="title">🕕 World clock</h1>
         <form>
           <select id="city">
             <option value="">Select one city</option>
@@ -33,21 +33,29 @@
           <li id="los-angeles">
             <div class="city_content">
               <h2>Los Angeles 🇺🇸</h2>
-              <p class="date">November 25th 2022</p>
+              <p class="date"></p>
             </div>
-            <div class="time">1:28:14 <small>AM</small></div>
+            <div class="time"></div>
           </li>
-          <li id="paris">
+          <li id="rome">
             <div class="city_content">
-              <h2>Paris 🇫🇷</h2>
-              <p class="date">November 25th 2022</p>
+              <h2>Rome 🇮🇹</h2>
+              <p class="date"></p>
             </div>
-            <div class="time">1:28:14 <small>AM</small></div>
+            <div class="time"></div>
+          </li>
+          <li id="auckland">
+            <div class="city_content">
+              <h2>Auckland 🇳🇿</h2>
+              <p class="date"></p>
+            </div>
+            <div class="time"></div>
           </li>
         </ul>
       </div>
       <footer>
         <p class="built_by">
+          👩‍💻
           <a href="https://github.com/martamd-front/world-clock" target="_blank"
             >Open-source code</a
           >
